# morphos

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: CONTEXT.md  MAC_PORT.md
source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveformDisplay.h
source/physics/: CLAUDE.md  EffectZone.h  FieldObject.h  FluxGate.h  ModMatrix.h  PathObject.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsState.h  TangentPath.h  TrajectoryPath.h
source/synthesis/: GrainEngine.h  SampleSource.h  SineTable.h  SpectrumPalette.h  TimbralAnchor.h
